Fix overflow

--- a/app/webroot/test/Inte/css/styles.css
+++ b/app/webroot/test/Inte/css/styles.css
@@ -308,6 +308,7 @@ a:hover {
   width: 100%;
   height: 100%;
   min-width: 800px;
+  overflow-x : hidden;
 }
 
 .dashboardContainer, .desktopContainer {
